feature(embedded fields) : RM-1261::[PAIEMENT] Hosted fields - Lots 1,2,3 (CB, Sepa, règles de priorisation )
Tentative 2 Ajout config public key

--- a/src/Resources/translations/messages.fr.yaml
+++ b/src/Resources/translations/messages.fr.yaml
@@ -8,6 +8,9 @@ akki:
       marketplace_uuid:
         label: UUID Marketplace
         help: UUID Marketplace
+      marketplace_public_key:
+        label: Clé publique
+        help: a renseigner pour les embedded fields
       password:
         label: Mot de passe
       ctx_mode:
