--- a/src/Resources/translations/messages.en.yaml
+++ b/src/Resources/translations/messages.en.yaml
@@ -8,6 +8,9 @@ akki:
       marketplace_uuid:
         label: traduction_missing
         help: traduction_missing
+      marketplace_public_key:
+        label: traduction_missing
+        help: traduction_missing
       password:
         label: traduction_missing
       ctx_mode:
