fix(upgrade) : RM-1601::[Hosted Felds] Les champs Lyra ne s'ouvrent pas lors d'une commande mixte Reworld + MarketPlace

--- a/src/Resources/translations/messages.en.yaml
+++ b/src/Resources/translations/messages.en.yaml
@@ -8,6 +8,9 @@ akki:
       marketplace_uuid:
         label: traduction_missing
         help: traduction_missing
+      lyra_marketplace_seller_uuid:
+        label: traduction_missing
+        help: traduction_missing
       marketplace_public_key:
         label: traduction_missing
         help: traduction_missing
