--- a/src/Resources/translations/messages.fr.yaml
+++ b/src/Resources/translations/messages.fr.yaml
@@ -8,6 +8,9 @@ akki:
       marketplace_uuid:
         label: UUID Marketplace
         help: UUID Marketplace
+      lyra_marketplace_seller_uuid:
+        label: Lyra Seller UUID Marketplace
+        help: Lyra Seller UUID Marketplace
       marketplace_public_key:
         label: Clé publique
         help: a renseigner pour les embedded fields
